--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,9 +5,14 @@ bases:
 resources:
   - bases/ec2.services.k8s.aws_dhcpoptions.yaml
   - bases/ec2.services.k8s.aws_internetgateways.yaml
+  - bases/ec2.services.k8s.aws_launchtemplates.yaml
+  - bases/ec2.services.k8s.aws_launchtemplateversions.yaml
+  - bases/ec2.services.k8s.aws_natgateways.yaml
+  - bases/ec2.services.k8s.aws_networkacls.yaml
   - bases/ec2.services.k8s.aws_routetables.yaml
   - bases/ec2.services.k8s.aws_securitygroups.yaml
   - bases/ec2.services.k8s.aws_subnets.yaml
   - bases/ec2.services.k8s.aws_transitgateways.yaml
   - bases/ec2.services.k8s.aws_vpcs.yaml
   - bases/ec2.services.k8s.aws_vpcendpoints.yaml
+  - bases/ec2.services.k8s.aws_vpcendpointserviceconfigurations.yaml
