--- a/generator.yaml
+++ b/generator.yaml
@@ -5,6 +5,10 @@ ignore:
   field_paths:
     - CreateDhcpOptionsInput.DryRun
     - CreateInternetGatewayInput.DryRun
+    - CreateNatGatewayInput.DryRun
+    - CreateNetworkAclInput.DryRun
+    - CreateLaunchTemplateInput.DryRun
+    - CreateLaunchTemplateVersionInput.DryRun
     - CreateRouteInput.DryRun
     - CreateRouteInput.RouteTableId
     - CreateRouteTableInput.DryRun
@@ -13,6 +17,7 @@ ignore:
     - CreateTransitGatewayInput.DryRun
     - CreateVpcInput.DryRun
     - CreateVpcEndpointInput.DryRun
+    - CreateVpcEndpointServiceConfigurationInput.DryRun
     - DeleteRouteInput.DryRun
     - DeleteRouteInput.RouteTableId
     # support EC2-VPC only
@@ -37,14 +42,14 @@ ignore:
     - InstanceExportTask
     #- InternetGateway
     - KeyPair
-    - LaunchTemplateVersion
-    - LaunchTemplate
+    #- LaunchTemplateVersion
+    #- LaunchTemplate
     - LocalGatewayRouteTableVpcAssociation
     - LocalGatewayRoute
     - ManagedPrefixList
-    - NatGateway
+    # - NatGateway
     - NetworkAclEntry
-    - NetworkAcl
+    # - NetworkAcl
     - NetworkInsightsPath
     - NetworkInterfacePermission
     - NetworkInterface
@@ -75,7 +80,7 @@ ignore:
     #- TransitGateway
     - Volume
     - VpcEndpointConnectionNotification
-    - VpcEndpointServiceConfiguration
+    # - VpcEndpointServiceConfiguration
     #- VpcEndpoint
     #- Vpc
     - VpcCidrBlock
@@ -127,6 +132,12 @@ resources:
         template_path: hooks/route_table/sdk_file_end.go.tpl
     update_operation:
       custom_method_name: customUpdateRouteTable
+  LaunchTemplateVersion:
+    fields:
+      LaunchTemplateID:
+        is_primary_key: true
+  NatGateway:
+    is_arn_primary_key: true
   SecurityGroup:
     fields:
       # support EC2-VPC only
@@ -159,6 +170,16 @@ resources:
       terminal_codes:
         - InvalidVpcID.Malformed
         - InvalidVpcID.NotFound
+  VpcEndpointServiceConfiguration:
+    is_arn_primary_key: true
+    fields:
+      AllowedPrincipals:
+        from:
+          operation: ModifyVpcEndpointServicePermissions 
+          path: AddAllowedPrincipals
+    hooks:
+      sdk_create_post_request:
+        template_path: hooks/vpc_endpoint_service_configuration/sdk_create_build_request.go.tpl
   VpcEndpoint:
     exceptions:
       terminal_codes:
