--- a/helm/templates/role-writer.yaml
+++ b/helm/templates/role-writer.yaml
@@ -29,6 +29,8 @@ rules:
 
   - vpcendpoints
 
+  - vpcendpointserviceconfigurations
+
   verbs:
   - create
   - delete
@@ -50,6 +52,7 @@ rules:
   - transitgateways
   - vpcs
   - vpcendpoints
+  - vpcendpointserviceconfigurations
   verbs:
   - get
   - patch
