--- a/config/rbac/role-writer.yaml
+++ b/config/rbac/role-writer.yaml
@@ -19,6 +19,7 @@ rules:
   - transitgateways
   - vpcs
   - vpcendpoints
+  - vpcendpointserviceconfigurations
   verbs:
   - create
   - delete
@@ -40,6 +41,7 @@ rules:
   - transitgateways
   - vpcs
   - vpcendpoints
+  - vpcendpointserviceconfigurations
   verbs:
   - get
   - patch
